add redis-cli --cluster import command usage

--- a/development/架构/缓存/Redis/配置项/主从replica配置.conf
+++ b/development/架构/缓存/Redis/配置项/主从replica配置.conf
@@ -1,5 +1,5 @@
 ################################## NETWORK #####################################
-bind 127.0.0.1
+bind 192.168.199.131 127.0.0.1 localhost
 protected-mode yes
 port 6379
 tcp-backlog 511
