--- a/development/架构/缓存/Redis/配置项/配置项模板-带注释.conf
+++ b/development/架构/缓存/Redis/配置项/配置项模板-带注释.conf
@@ -850,6 +850,9 @@ lua-time-limit 5000
 # for it to be considered in failure state.
 # Most other internal time limits are multiple of the node timeout.
 #
+# [注解]
+# 在集群中，如果一个master节点失效（即处于faile状态）后，失效时间必须大于cluster-node-timeout设置的时间，才有可能使它的slave节点被提升为master节点，参考官方文档[Slave election and promotion](https://redis.io/topics/cluster-spec)
+# 可以通过在master节点上执行`> debug crash-and-recover`命令进行测试，该命令可以使当前节点失效指定的时间并自动恢复到正常状态。当失效时间<=cluster-node-timeout时，slave节点不会被提升为master节点。
 # cluster-node-timeout 15000
 
 # A replica of a failing master will avoid to start a failover if its data
@@ -891,6 +894,8 @@ lua-time-limit 5000
 # master regardless of the last time they interacted with the master.
 # (However they'll always try to apply a delay proportional to their
 # offset rank).
+# [注解]：“that replicas will always try to failover the
+# master regardless of the last time they interacted with the master”中的failover，failover的前提是master已经被检测到fail了。否则就不叫failover了。
 #
 # Zero is the only value able to guarantee that when all the partitions heal
 # the cluster will always be able to continue.
