--- a/development/架构/缓存/Redis/配置项/配置项模板-带注释.conf
+++ b/development/架构/缓存/Redis/配置项/配置项模板-带注释.conf
@@ -754,6 +754,10 @@ appendfsync everysec
 #
 # If you have latency problems turn this to "yes". Otherwise leave it as
 # "no" that is the safest pick from the point of view of durability.
+# [注解] 
+# 用aof都有这这样的一个问题 就是aof文件要是不定期进行rewrite的话，就会不断的增大。所以，对这些redis节点进行了定期的rewrite。
+# 如果Redis的子进程在做rewrite的同时，主进程发生写入操作从而触发fsync操作，主进程也会写磁盘，子进程和主进程同时写磁盘就有可能发生冲突。
+# 该配置项的值如果为yes，则在子进程执行rewrite操作的过程中，主进程将不进行命令追加操作，而只是将其放在缓冲区里
 
 no-appendfsync-on-rewrite no
 
